- Added fragment. - Added resources. - Added enums. - Added adapter. - Populating adapter based on enum.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackground">#FFFDE7</color>
     <color name="colorMainButton">#2196f2</color>
+    <color name="colorSelectedListItem">#eaeaea</color>
 </resources>
