- Added end of quiz dialog. - Added result & request code constants. - Added code to change the background of a completed quiz. - Fixed some bugs.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBackground">#FFFDE7</color>
     <color name="colorMainButton">#2196f2</color>
     <color name="colorSelectedListItem">#eaeaea</color>
+    <color name="colorCompletedItem">#81c784</color>
 </resources>
