--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -18,33 +18,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_marginBottom="50dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp">
 
         <Button
             android:id="@+id/btn_opt1"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_width="wrap_content"
+            android:layout_height="72dp"
             android:layout_weight="1"
             android:textSize="24sp"
+            android:layout_marginEnd="5dp"
             tools:text="11"/>
 
         <Button
             android:id="@+id/btn_opt2"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_width="wrap_content"
+            android:layout_height="72dp"
             android:layout_weight="1"
             android:textSize="24sp"
             tools:text="4"/>
 
         <Button
             android:id="@+id/btn_opt3"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_width="wrap_content"
+            android:layout_height="72dp"
             android:layout_weight="1"
             android:textSize="24sp"
+            android:layout_marginStart="5dp"
             tools:text="9"/>
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/iv_feedback"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_tick"
+        android:layout_centerInParent="true"/>
+
 </RelativeLayout>
