- Added toolbar to quiz screen. - Played around with the styles of buttons and the overall colour scheme of the app - goodbye startup blue!

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="40dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/tv_question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:textSize="50dp"
-        tools:text="10 + 1 = ?"/>
+        tools:text="10 + 1 = ?"
+        android:layout_below="@+id/appbar"
+        android:layout_alignParentStart="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,8 +31,10 @@
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_weight="1"
-            android:textSize="24sp"
+            android:textSize="28sp"
             android:layout_marginEnd="5dp"
+            android:background="@color/colorMainButton"
+            android:textColor="@android:color/white"
             tools:text="11"/>
 
         <Button
@@ -37,7 +42,9 @@
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_weight="1"
-            android:textSize="24sp"
+            android:textSize="28sp"
+            android:background="@color/colorMainButton"
+            android:textColor="@android:color/white"
             tools:text="4"/>
 
         <Button
@@ -45,8 +52,10 @@
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_weight="1"
-            android:textSize="24sp"
+            android:textSize="28sp"
             android:layout_marginStart="5dp"
+            android:background="@color/colorMainButton"
+            android:textColor="@android:color/white"
             tools:text="9"/>
     </LinearLayout>
 
@@ -54,7 +63,22 @@
         android:id="@+id/iv_feedback"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/ic_tick"
+        tools:src="@drawable/ic_tick"
         android:layout_centerInParent="true"/>
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+    </android.support.design.widget.AppBarLayout>
 
 </RelativeLayout>
