--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,8 @@
     tools:showIn="@layout/activity_main"
     android:paddingStart="30dp"
     android:paddingEnd="30dp"
-    android:paddingTop="40dp">
+    android:paddingTop="40dp"
+    android:layout_gravity="center">
 
         <Button
             android:id="@+id/addition"
