--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -18,13 +18,15 @@
         android:layout_alignParentStart="true"/>
 
     <LinearLayout
+        android:id="@+id/button_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:layout_marginBottom="50dp"
         android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp">
+        android:layout_marginEnd="25dp"
+        android:transitionName="endOfQuiz">
 
         <Button
             android:id="@+id/btn_opt1"
@@ -32,7 +34,7 @@
             android:layout_height="72dp"
             android:layout_weight="1"
             android:textSize="28sp"
-            android:layout_marginEnd="5dp"
+            android:layout_margin="5dp"
             android:background="@color/colorMainButton"
             android:textColor="@android:color/white"
             tools:text="11"/>
@@ -43,6 +45,7 @@
             android:layout_height="72dp"
             android:layout_weight="1"
             android:textSize="28sp"
+            android:layout_margin="5dp"
             android:background="@color/colorMainButton"
             android:textColor="@android:color/white"
             tools:text="4"/>
@@ -53,7 +56,7 @@
             android:layout_height="72dp"
             android:layout_weight="1"
             android:textSize="28sp"
-            android:layout_marginStart="5dp"
+            android:layout_margin="5dp"
             android:background="@color/colorMainButton"
             android:textColor="@android:color/white"
             tools:text="9"/>
@@ -80,5 +83,18 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
+
+    <Button
+        android:id="@+id/btn_cheat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="cheat"/>
+
+    <FrameLayout
+        android:id="@+id/frame_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </RelativeLayout>
