--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,15 @@
 
     <include layout="@layout/content_main"/>
 
+    <TextView
+        android:id="@+id/version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="20dp"
+        android:textSize="12sp"
+        android:text="@string/version"/>
+
     <FrameLayout
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
