- Added launcher icons.

--- a/app/src/main/res/values/api_keys.xml
+++ b/app/src/main/res/values/api_keys.xml
@@ -1,3 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="fabric_key">b7e69f91d6c0d163f0615717e90bdc789b6c44f4</string>
 </resources>
